--- a/Educação Financeira/financeira.html
+++ b/Educação Financeira/financeira.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--CSS-->
-    <link rel=stylesheet type=text/css href="/Educação Financeira/assets/css/styles.css">
-    <link rel="stylesheet" href="/Educação Financeira/assets/css/hover.css">
-    <link rel="stylesheet" href="/Educação Financeira/assets/css/wickedcss.css">
+    <link rel=stylesheet type=text/css href="/Extensao-Universitaria/Educação Financeira/assets/css/styles.css">
+    <link rel="stylesheet" href="/Extensao-Universitaria/Educação Financeira/assets/css/hover.css">
+    <link rel="stylesheet" href="/Extensao-Universitaria/Educação Financeira/assets/css/wickedcss.css">
     <!--JavaScript-->
-    <script src="/Educação Financeira/assets/js/script.js"></script>
+    <script src="/Extensao-Universitaria/Educação Financeira/assets/js/script.js"></script>
     <!--Icon-->
-    <link rel="shortcut icon" type="imagex/png" href="/Educação Financeira/assets/img/Icon.png">
+    <link rel="shortcut icon" type="imagex/png" href="/Extensao-Universitaria/Educação Financeira/assets/img/Icon.png">
     <title>Proteção Animal</title>
 </head>
 
