--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Projetos de Extensão</title>
 </head>
 <body>
-    <a href="/Animal/animal.html">Proteção Animal</a>
+    <a href="/Extensao-Universitaria/Animal/animal.html">Proteção Animal</a>
     <a href="/Educação Financeira/financeira.html">Educação Financeira</a>
     <a href="/Saúde Pública/saude.html">Saúde Pública</a>
     <a href="/Sustentabilidade/sustentabilidade.html">Sustentabilidade</a>
