--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <a href="/Extensao-Universitaria/Animal/animal.html">Proteção Animal</a>
-    <a href="/Educação Financeira/financeira.html">Educação Financeira</a>
-    <a href="/Saúde Pública/saude.html">Saúde Pública</a>
-    <a href="/Sustentabilidade/sustentabilidade.html">Sustentabilidade</a>
+    <a href="/Extensao-Universitaria/Educação Financeira/financeira.html">Educação Financeira</a>
+    <a href="/Extensao-Universitaria/Saúde Pública/saude.html">Saúde Pública</a>
+    <a href="/Extensao-Universitaria/Sustentabilidade/sustentabilidade.html">Sustentabilidade</a>
 </body>
 </html>
