--- a/Animal/animal.html
+++ b/Animal/animal.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--CSS-->
-    <link rel=stylesheet type=text/css href="/Extensao-Universitaria/Animal/assets/css/styles.css">
-    <link rel="stylesheet" href="/Extensao-Universitaria/Animal/assets/css/hover.css">
-    <link rel="stylesheet" href="/Extensao-Universitaria/Animal/assets/css/wickedcss.css">
+    <link rel=stylesheet type=text/css href="/Animal/assets/css/styles.css">
+    <link rel="stylesheet" href="/Animal/assets/css/hover.css">
+    <link rel="stylesheet" href="/Animal/assets/css/wickedcss.css">
     <!--JavaScript-->
-    <script src="/Extensao-Universitaria/Animal/assets/js/script.js"></script>
+    <script src="/Animal/assets/js/script.js"></script>
     <!--Icon-->
-    <link rel="shortcut icon" type="imagex/png" href="/Extensao-Universitaria/Animal/assets/img/Icon.png">
+    <link rel="shortcut icon" type="imagex/png" href="/Animal/assets/img/Icon.png">
     <title>Proteção Animal</title>
 </head>
 
@@ -98,7 +98,7 @@
                 <div id="banner"></div>
                 <div class="info">
                     <div id="texto1">
-                        <h1>Bem-vindo ao Portal de Proteção Animal</h1>
+                        <h1>Bem-vindo ao Portal de Proteção Animal!</h1>
                         <p>
                             Nosso objetivo é conscientizar e informar a comunidade sobre a importância do cuidado e
                             respeito aos animais. Aqui, você encontrará tudo o que precisa saber sobre adoção
