--- a/index.html
+++ b/index.html
@@ -1,14 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projetos de Extensão</title>
 </head>
+
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+    }
+
+    body {
+        background-color: #245c0a;
+    }
+
+    div {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+    }
+
+    a {
+        font-size: 60px;
+        font-family: sans-serif;
+        color: #f2f2f2;
+        text-decoration: none;
+        transition: all .5s;
+        margin-bottom: 2%;
+        line-height: 300%;
+    }
+
+    a:hover {
+        transform: scale(1.1);
+        transition: all .5s;
+    }
+</style>
+
 <body>
-    <a href="/Extensao-Universitaria/Animal/animal.html">Proteção Animal</a>
-    <a href="/Extensao-Universitaria/Educação Financeira/financeira.html">Educação Financeira</a>
-    <a href="/Extensao-Universitaria/Saúde Pública/saude.html">Saúde Pública</a>
-    <a href="/Extensao-Universitaria/Sustentabilidade/sustentabilidade.html">Sustentabilidade</a>
+    <div>
+        <a href="/Animal/animal.html">Proteção Animal</a>
+        <a href="/Educação Financeira/financeira.html">Educação Financeira</a>
+        <a href="/Saúde Pública/saude.html">Saúde Pública</a>
+        <a href="/Sustentabilidade/sustentabilidade.html">Sustentabilidade</a>
+    </div>
 </body>
+
 </html>
