Novos Temas e Sites Prontos

--- a/Educação Financeira/financeira.html
+++ b/Educação Financeira/financeira.html
@@ -12,7 +12,7 @@
     <script src="/Educação Financeira/assets/js/script.js"></script>
     <!--Icon-->
     <link rel="shortcut icon" type="imagex/png" href="/Educação Financeira/assets/img/Icon.png">
-    <title>Proteção Animal</title>
+    <title>Educação Financeira</title>
 </head>
 
 <body>
