--- a/Saúde Pública/saude.html
+++ b/Saúde Pública/saude.html
@@ -12,7 +12,7 @@
     <script src="/Saúde Pública/assets/js/script.js"></script>
     <!--Icon-->
     <link rel="shortcut icon" type="imagex/png" href="/Saúde Pública/assets/img/Icon.png">
-    <title>Proteção Animal</title>
+    <title>Saúde Pública</title>
 </head>
 
 <body>
@@ -26,69 +26,31 @@
                             onclick="Section('inicial')">Sobre</button>
                     </li>
                     <li>
-                        <button class="hvr-underline-from-left slideRight section"
-                            onclick="Section('adocao')">Adoção</button>
+                        <button class="hvr-underline-from-left slideRight section" onclick="Section('adocao')">Postos e
+                            Hospitais</button>
                     </li>
                     <li>
                         <h1 class="slideRight" id="titulo">
-                            <svg fill="#F8F7F3" width="40px" version="1.1" viewBox="144 144 512 512"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                                <g id="SVGRepo_iconCarrier">
-                                    <g>
-                                        <path
-                                            d="m523.45 274.35c-8.6328 33.988-37.133 55.852-63.535 48.738-26.406-7.1133-40.859-40.539-32.23-74.527 8.6289-33.988 37.133-55.852 63.535-48.738 26.406 7.1133 40.859 40.543 32.23 74.527z">
-                                        </path>
-                                        <path
-                                            d="m599.02 400.3c-8.6289 33.988-37.129 55.852-63.535 48.738-26.406-7.1133-40.859-40.543-32.23-74.527 8.6328-33.988 37.133-55.852 63.535-48.738 26.406 7.1094 40.859 40.539 32.23 74.527z">
-                                        </path>
-                                        <path
-                                            d="m308.77 199.82c26.406-7.1172 54.906 14.75 63.535 48.738 8.6289 33.984-5.8242 67.418-32.227 74.527-26.406 7.1133-54.906-14.75-63.535-48.738-8.6328-33.98 5.8203-67.414 32.227-74.527z">
-                                        </path>
-                                        <path
-                                            d="m233.2 325.77c26.402-7.1133 54.906 14.754 63.535 48.738 8.6289 33.988-5.8242 67.422-32.23 74.531-26.402 7.1133-54.902-14.754-63.535-48.738-8.6289-33.988 5.8242-67.414 32.23-74.531z">
-                                        </path>
-                                        <path
-                                            d="m516.19 482.5c-28.559-14.613-48.895-47.883-54.215-79.52-5.1172-30.422-31.766-53.367-61.977-53.367-30.215 0-56.863 22.945-61.98 53.367-5.3242 31.652-25.719 64.902-54.289 79.52-25.551 13.066-39.098 40.5-33.699 68.27 5.0977 26.238 27.109 46.895 53.531 50.227 12.152 1.5234 24.203-0.375 34.957-5.4023 5.0625-2.3672 7.2422-4.2305 11.016-6.6094 20.148-12.703 43.172-12.668 50.465-12.656 7.3086 0.011719 30.086 0.046875 50.379 12.656 4.293 2.668 7.4961 5.2734 13.977 7.9102 9.9688 4.0547 20.934 5.5039 32 4.1016 26.426-3.332 48.438-23.988 53.535-50.227 5.3984-27.77-8.1484-55.203-33.699-68.27z">
-                                        </path>
-                                    </g>
-                                </g>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32px" fill="none" viewBox="0 0 24 24"
+                                stroke-width="1.5" stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
                             </svg>
-                            PROTEÇÃO ANIMAL
-                            <svg fill="#F8F7F3" width="40px" version="1.1" viewBox="144 144 512 512"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                                <g id="SVGRepo_iconCarrier">
-                                    <g>
-                                        <path
-                                            d="m523.45 274.35c-8.6328 33.988-37.133 55.852-63.535 48.738-26.406-7.1133-40.859-40.539-32.23-74.527 8.6289-33.988 37.133-55.852 63.535-48.738 26.406 7.1133 40.859 40.543 32.23 74.527z">
-                                        </path>
-                                        <path
-                                            d="m599.02 400.3c-8.6289 33.988-37.129 55.852-63.535 48.738-26.406-7.1133-40.859-40.543-32.23-74.527 8.6328-33.988 37.133-55.852 63.535-48.738 26.406 7.1094 40.859 40.539 32.23 74.527z">
-                                        </path>
-                                        <path
-                                            d="m308.77 199.82c26.406-7.1172 54.906 14.75 63.535 48.738 8.6289 33.984-5.8242 67.418-32.227 74.527-26.406 7.1133-54.906-14.75-63.535-48.738-8.6328-33.98 5.8203-67.414 32.227-74.527z">
-                                        </path>
-                                        <path
-                                            d="m233.2 325.77c26.402-7.1133 54.906 14.754 63.535 48.738 8.6289 33.988-5.8242 67.422-32.23 74.531-26.402 7.1133-54.902-14.754-63.535-48.738-8.6289-33.988 5.8242-67.414 32.23-74.531z">
-                                        </path>
-                                        <path
-                                            d="m516.19 482.5c-28.559-14.613-48.895-47.883-54.215-79.52-5.1172-30.422-31.766-53.367-61.977-53.367-30.215 0-56.863 22.945-61.98 53.367-5.3242 31.652-25.719 64.902-54.289 79.52-25.551 13.066-39.098 40.5-33.699 68.27 5.0977 26.238 27.109 46.895 53.531 50.227 12.152 1.5234 24.203-0.375 34.957-5.4023 5.0625-2.3672 7.2422-4.2305 11.016-6.6094 20.148-12.703 43.172-12.668 50.465-12.656 7.3086 0.011719 30.086 0.046875 50.379 12.656 4.293 2.668 7.4961 5.2734 13.977 7.9102 9.9688 4.0547 20.934 5.5039 32 4.1016 26.426-3.332 48.438-23.988 53.535-50.227 5.3984-27.77-8.1484-55.203-33.699-68.27z">
-                                        </path>
-                                    </g>
-                                </g>
+                            SAÚDE PÚBLICA
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32px" fill="none" viewBox="0 0 24 24"
+                                stroke-width="1.5" stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
                             </svg>
                         </h1>
                     </li>
                     <li>
                         <button class="hvr-underline-from-left slideRight section"
-                            onclick="Section('cuidados')">Cuidados</button>
+                            onclick="Section('cuidados')">Vacinação</button>
                     </li>
                     <li>
                         <button class="hvr-underline-from-left slideRight section"
-                            onclick="Section('direitos')">Direitos</button>
+                            onclick="Section('direitos')">Serviços</button>
                     </li>
                 </ul>
             </div>
@@ -98,18 +60,14 @@
                 <div id="banner"></div>
                 <div class="info">
                     <div id="texto1">
-                        <h1>Bem-vindo ao Portal de Proteção Animal</h1>
+                        <h1>Bem-vindo ao Guia de Saúde Pública Local</h1>
                         <p>
-                            Nosso objetivo é conscientizar e informar a comunidade sobre a importância do cuidado e
-                            respeito aos animais. Aqui, você encontrará tudo o que precisa saber sobre adoção
-                            responsável, bem-estar animal, cuidados necessários e direitos.<br><br>
-
-                            Proteger os animais é uma responsabilidade de todos. Através de pequenas atitudes, como
-                            adoção, voluntariado ou denúncias de maus-tratos, podemos garantir que nossos amigos de
-                            quatro patas tenham a vida digna que merecem.
-
-                            Explore nossas seções e descubra como você pode fazer a diferença na vida de muitos animais.
-                            Junte-se a nós nessa causa!</p>
+                            Este portal foi criado para ajudar você a encontrar de forma rápida e simples todas as
+                            informações relacionadas à saúde pública em sua cidade. Aqui, você terá acesso a informações
+                            detalhadas sobre postos de saúde, hospitais, campanhas de vacinação e serviços de saúde
+                            oferecidos pela prefeitura. Nosso objetivo é centralizar essas informações para que você
+                            saiba exatamente onde ir quando precisar de atendimento médico, vacinas ou orientações de
+                            saúde. Explore nossas seções e fique por dentro dos serviços disponíveis perto de você!</p>
                     </div>
                     <div id="banner2"></div>
                 </div>
@@ -119,34 +77,20 @@
             <div class="grid">
                 <div id="banner3"></div>
                 <div id="texto2">
-                    <h1>Adoção Responsável</h1>
+                    <h1>Postos de Saúde e Hospitais</h1>
                     <p>
-                        Adotar um animal é um ato de amor e responsabilidade. Milhares de cães e gatos aguardam em
-                        abrigos e
-                        ONGs por uma nova chance de ter um lar cheio de carinho e cuidado.<br>
-
-                        Ao adotar, você oferece uma vida digna a esses animais, contribuindo para a redução do abandono
-                        e
-                        superlotação dos abrigos. Além disso, adotar é uma oportunidade de receber um amigo leal que
-                        trará
-                        alegria ao seu dia a dia.<br><br>
-
-                        O que você precisa saber antes de adotar:<br>
-                        <li>
-                            Adotar um animal significa estar comprometido com o bem-estar dele por
-                            toda a vida. Pense no tempo, espaço e recursos necessários para oferecer os cuidados
-                            adequados.
-                        </li>
-                        <li>
-                            Alguns animais podem ter necessidades especiais, como dieta,
-                            cuidados veterinários ou mais atenção, principalmente aqueles resgatados de situações de
-                            maus-tratos.
-                        </li>
-                        <li>
-                            Escolha um animal que se encaixe ao seu estilo de vida. Animais mais ativos
-                            precisam de mais exercícios, enquanto outros podem ser mais tranquilos e se adaptar melhor a
-                            ambientes menores.
-                        </li>
+                        Nesta seção, você terá acesso a um guia completo dos postos de saúde e hospitais disponíveis em
+                        sua cidade. Cada unidade é apresentada com detalhes importantes como endereço, horários de
+                        funcionamento, especialidades atendidas e telefones para contato. Com o objetivo de facilitar
+                        ainda mais sua busca por atendimento, disponibilizamos um mapa interativo que permite localizar
+                        facilmente a unidade de saúde mais próxima da sua residência.
+                        <br><br>
+                        Os serviços oferecidos em cada posto e hospital incluem desde atendimentos básicos, como
+                        consultas médicas e exames de rotina, até procedimentos mais especializados, como atendimento de
+                        emergência e internações. Também fornecemos informações sobre a estrutura de cada hospital,
+                        destacando as especialidades disponíveis, como pediatria, ginecologia, cardiologia, entre
+                        outras. Com essas informações, você pode planejar melhor suas visitas e garantir o acesso ao
+                        atendimento médico de qualidade que sua família precisa.
                     </p>
                 </div>
             </div>
@@ -154,31 +98,20 @@
         <section id="cuidados" class="slideRight">
             <div class="grid">
                 <div id="texto3">
-                    <h1>Cuidados com Animais</h1>
+                    <h1>Campanhas de Vacinação</h1>
                     <p>
-                        Cuidar bem de um animal de estimação é essencial para garantir sua saúde e bem-estar. Animais
-                        dependem de nós para terem uma vida feliz, saudável e segura.<br>
-
-                        O que você precisa saber antes de adotar:<br>
-                        <li>
-                            A nutrição correta é fundamental para a saúde do seu animal. Escolha rações de qualidade ou
-                            alimentos recomendados pelo veterinário, adequados ao porte, idade e condições de saúde do
-                            seu pet.
-                        </li>
-                        <li>
-                            Manter o calendário de vacinas em dia é essencial para prevenir doenças graves, tanto nos
-                            animais quanto nas pessoas. Além disso, a vermifugação regular protege seu pet contra
-                            parasitas internos.
-                        </li>
-                        <li>
-                            Cuide da higiene regular do seu animal, incluindo banhos, escovação de pelos e corte das
-                            unhas. Esses cuidados não só mantêm seu pet limpo, como também previnem doenças.
-                        </li>
-                        <li>
-                            Animais, especialmente os cães, precisam de exercícios diários para gastar energia e evitar
-                            o estresse. Passeios, brincadeiras e até mesmo jogos que estimulem o intelecto são
-                            importantes para a saúde do seu pet.
-                        </li>
+                        Manter a vacinação em dia é uma das formas mais eficazes de garantir sua saúde e a de sua
+                        comunidade. Nesta seção, você encontrará informações completas sobre as campanhas de vacinação
+                        promovidas pela prefeitura. Nossa plataforma oferece detalhes sobre as vacinas disponíveis, as
+                        datas de aplicação e os locais de vacinação em sua cidade, ajudando você a se organizar para
+                        proteger sua saúde.
+                        <br><br>
+                        Além das vacinas de rotina, como a da gripe e as vacinas infantis, também mantemos nosso
+                        calendário atualizado para informar sobre campanhas sazonais ou emergenciais, como as de
+                        prevenção contra a COVID-19. Aqui, você encontrará orientações sobre quem deve se vacinar, a
+                        importância de cada imunização e como garantir que todos na sua família estejam protegidos.
+                        Nossos mapas interativos também indicam os pontos de vacinação próximos a você, facilitando seu
+                        deslocamento e garantindo mais praticidade no acesso às vacinas.
                     </p>
                 </div>
                 <div id="banner4"></div>
@@ -188,22 +121,20 @@
             <div class="grid">
                 <div id="banner5"></div>
                 <div id="texto4">
-                    <h1>Direitos dos Animais</h1>
+                    <h1>Serviços de Saúde Oferecidos pela Prefeitura</h1>
                     <p>
-                        Os direitos dos animais são fundamentais para garantir que todas as espécies sejam tratadas com
-                        respeito, dignidade e proteção contra maus-tratos.<br><br>
-                        Todos os animais têm o direito de viver sem sofrer abusos, crueldades ou maus-tratos. A Lei
-                        de Crimes Ambientais (Lei nº 9.605/1998) prevê penalidades para quem praticar atos de
-                        crueldade contra animais, sejam eles domésticos, silvestres ou exóticos.<br><br>
-                        Maltratar um animal é crime! Abandono, agressões físicas, falta de cuidados médicos,
-                        confinamento inadequado e privação de alimento ou água são considerados maus-tratos.<br><br>
-                        Os animais devem viver em ambientes adequados às suas necessidades, com espaço,
-                        abrigo, alimentação, água e liberdade para se movimentar.<br><br>
-                        <strong>Como Denunciar Maus-Tratos?</strong><br>
-                        Se você presenciar ou souber de casos de maus-tratos contra animais, não hesite em denunciar!
-                        Entre em contato com a polícia local, a delegacia de crimes ambientais ou órgãos como o IBAMA.
-                        Sua denúncia pode salvar a vida de um animal.
-
+                        A prefeitura oferece uma série de serviços de saúde à população, além dos atendimentos médicos
+                        básicos. Nesta seção, você poderá conhecer programas importantes como o atendimento odontológico
+                        gratuito, o suporte psicológico e psiquiátrico e os programas de acompanhamento para pacientes
+                        com doenças crônicas, como diabetes e hipertensão. Cada serviço é descrito com orientações sobre
+                        onde encontrá-los, quais documentos são necessários e como agendar consultas ou procedimentos.
+                        <br><br>
+                        Além dos cuidados diretos, destacamos as iniciativas de saúde preventiva, como os programas de
+                        pré-natal, campanhas de saúde bucal, e o suporte especializado para idosos e crianças. Nosso
+                        objetivo é garantir que você saiba como acessar esses recursos de maneira simples e rápida,
+                        contribuindo para uma melhor qualidade de vida para você e sua família. Use nosso guia para
+                        descobrir todos os serviços oferecidos e faça pleno uso do sistema de saúde pública de sua
+                        cidade.
                     </p>
                 </div>
             </div>
@@ -212,7 +143,8 @@
 
     <!--Footer-->
     <div id="footer">
-        <p>Copyright &copy; 2024 <a href="https://www.linkedin.com/in/rafael-marchioni-418a91258/" target="_blank">Rafael Marchioni</a>. All rights reserved.</p>
+        <p>Copyright &copy; 2024 <a href="https://www.linkedin.com/in/rafael-marchioni-418a91258/"
+                target="_blank">Rafael Marchioni</a>. All rights reserved.</p>
     </div>
 </body>
 
