--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         display: flex;
         flex-direction: column;
         text-align: center;
-        width: 100%;
+        width: 80%;
+        margin: 2% 0 0 10%;
     }
 
     a {
@@ -30,8 +31,8 @@
         color: #f2f2f2;
         text-decoration: none;
         transition: all .5s;
-        margin-bottom: 2%;
-        line-height: 300%;
+        margin-bottom: 3%;
+        line-height: 100%;
     }
 
     a:hover {
@@ -46,6 +47,10 @@
         <a href="/Educação Financeira/financeira.html">Educação Financeira</a>
         <a href="/Saúde Pública/saude.html">Saúde Pública</a>
         <a href="/Sustentabilidade/sustentabilidade.html">Sustentabilidade</a>
+        <a href="/Direitos/direitos.html">Direitos</a>
+        <a href="/Bem Estar Mental/mental.html">Bem Estar Mental</a>
+        <a href="/Alimentação/alimentacao.html">Alimentação</a>
+        <a href="/Voluntariado Comunitário/voluntariado.html">Voluntariado Comunitário</a>
     </div>
 </body>
 
